Fix declaration dark mode colors

--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -1,3 +1,6 @@
+@import "bootstrap/scss/mixins/color-mode";
+
+
 body {
     font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
 }
@@ -12,6 +15,8 @@ a {
 }
 
 
+$color-mode-type: data;
+
 .declaration-exchange {
     background-color: #e5e4f6 !important;
 }
@@ -22,4 +27,18 @@ a {
 
 .declaration-sale {
     background-color: #f8e3e3 !important;
+}
+
+@include color-mode(dark) {
+    .declaration-exchange {
+        background-color: #20394b !important;
+    }
+
+    .declaration-purchase {
+        background-color: #354917 !important;
+    }
+
+    .declaration-sale {
+        background-color: #602a2a !important;
+    }
 }
